--- a/index.html
+++ b/index.html
@@ -3,10 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
     <title>Influencer Gear Website</title>
 </head>
 <body>
-    
+    <header class="header poppins-thin_primary_font">
+        <div class="influencer ">
+            <h4 >Influencer products</h4>
+        </div>
+        <div>
+            <ul class="navbar">
+                <li><a href="">Home</a></li>
+                <li><a href="">Products</a></li>
+                <li><a href="">sign up</a></li>
+                <li><a href="">log In</a></li>
+                <li><img class="cart"  src="icons8-search-30.png" alt=""></li>
+                <li><img class="cart" src="icons8-cart-50.png" alt=""></li>
+            </ul>
+        </div>
+    </header>
+    <main>
+        <section>
+            <div class="first-sec poppins-thin_primary_font">
+                <div class="start">
+                    <h1 class="journy">Start your Journey as 
+                    Influencer</h1>
+                    <p class="pera">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                    <button class="pre">Preebook now <img class="right_"src="icons8-right-arrow-24.png" alt=""></button>
+                </div>
+                <div class="camera">
+                    <img class="cam" src="./images/main-camera.png " alt="">
+                </div>
+            </div>
+        </section>
+        <section class="sec">
+            <div class="second_sec">
+                <div class="logo"><img src="./logos/Alibaba.svg" alt=""></div>
+                <div class="logo"><img src="./logos/Amazon.svg" alt=""></div>
+                <div class="logo"><img src="./logos/Daraz.pk Logo.svg" alt=""></div>
+                <div class="logo"><img src="./logos/Ebay.svg" alt=""></div>
+                <div class="logo"><img src="./logos/Rakuten.svg" alt=""></div>
+                <div class="logo"><img src="./logos/Target.svg" alt=""></div>
+                <div class="logo"><img src="./logos/Walmart.svg" alt=""></div>
+            </div>
+        </section>
+    </main>
+    <footer>
+
+
+    </footer>
 </body>
 </html>
