done with making first section responsive

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <body>
     <header class="header poppins-thin_primary_font">
         <div class="influencer ">
-            <h4 >Influencer products</h4>
+            <h4 class="margin_0" >Influencer products</h4>
         </div>
-        <div>
+        <div >
             <ul class="navbar">
                 <li><a href="">Home</a></li>
                 <li><a href="">Products</a></li>
-                <li><a href="">sign up</a></li>
-                <li><a href="">log In</a></li>
+                <li><a  href="">sign up</a></li>
+                <li><a  href="">log In</a></li>
                 <li><img class="cart"  src="icons8-search-30.png" alt=""></li>
                 <li><img class="cart" src="icons8-cart-50.png" alt=""></li>
             </ul>
@@ -35,7 +35,7 @@
                     <button class="pre">Preebook now <img class="right_"src="icons8-right-arrow-24.png" alt=""></button>
                 </div>
                 <div class="camera">
-                    <img class="cam" src="./images/main-camera.png " alt="">
+                    <img class="cam margin_0" src="./images/main-camera.png " alt="">
                 </div>
             </div>
         </section>
