done with makinf third section responsive

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
     <title>Influencer Gear Website</title>
 </head>
@@ -36,6 +42,7 @@
                 </div>
                 <div class="camera">
                     <img class="cam margin_0" src="./images/main-camera.png " alt="">
+                    
                 </div>
             </div>
         </section>
@@ -48,6 +55,86 @@
                 <div class="logo"><img src="./logos/Rakuten.svg" alt=""></div>
                 <div class="logo"><img src="./logos/Target.svg" alt=""></div>
                 <div class="logo"><img src="./logos/Walmart.svg" alt=""></div>
+            </div>
+        </section>
+        <section>
+            <div class="third_sec poppins-thin_primary_font">
+                <div class="popular"><h4 class="making">Popular Collection</h4></div>
+                <div class="container">
+                    <div class="items">
+                        <img class="suv" src="./images/tripod.png" alt="">
+                        <h1 class="items_heading">Flex Tripod</h1>
+                        <h1 class="items_price inter-secondery_font">$50.48</h1>
+                        <h4 class="roboto-third_font star">4.99</h4>
+                        <p class="inter-secondery_font items_pera">Wordwide shifting available
+                            Buyers protection possible!</p>
+                    </div>
+                    <div class="items">
+                        <img class="suv"  src="./images/mic.png" alt="">
+                        <h1 class="items_heading">microphone</h1>
+                        <h1 class="items_price inter-secondery_font">$120.25</h1>
+                        <h4 class="roboto-third_font star">4.99</h4>
+                        <p class="inter-secondery_font items_pera">Wordwide shifting available
+Buyers protection possible!</p>
+                    </div>
+                    <div class="items">
+                        <img class="suv"  src="./images/airpod.png" alt="">
+                        <h1 class="items_heading">Airbuds</h1>
+                        <h1 class="items_price inter-secondery_font">$100.00</h1>
+                        <h4 class="roboto-third_font star">4.99</h4>
+                        <p class="inter-secondery_font items_pera">Wordwide shifting available
+Buyers protection possible!</p>
+                    </div>
+                    <div class="items">
+                        <img class="suv"  src="./images/drone.png" alt="">
+                        <h1 class="items_heading">Drone</h1>
+                        <h1 class="items_price inter-secondery_font">$980.25</h1>
+                        <h4 class="roboto-third_font star">4.99</h4>
+                        <p class="inter-secondery_font items_pera"> Wordwide shifting available
+Buyers protection possible!</p>
+                    </div>
+                    <div class="items">
+                        <img class="suv"  src="./images/lights.png" alt="">
+                        <h1 class="items_heading">Light Setup</h1>
+                        <h1 class="items_price inter-secondery_font">$1200.00</h1>
+                        <h4 class="roboto-third_font star">4.99</h4>
+                        <p class="inter-secondery_font items_pera">Wordwide shifting available
+Buyers protection possible!</p>
+                    </div>
+                    <div class="items">
+                        <img class="suv"  src="./images/setup.png" alt="">
+                        <h1 class="items_heading">Photoshoot set</h1>
+                        <h1 class="items_price inter-secondery_font">$820.40</h1>
+                        <h4 class="roboto-third_font star">4.99</h4>
+                        <p class="inter-secondery_font items_pera">Wordwide shifting available
+Buyers protection possible!</p>
+                    </div>
+                    <div class="items">
+                        <img class="suv"  src="./images/camera.png" alt="">
+                        <h1 class="items_heading">Vlogging Camera</h1>
+                        <h1 class="items_price inter-secondery_font">$1800.80</h1>
+                        <h4 class="roboto-third_font star"> 4.99</h4>
+                        <p class="inter-secondery_font items_pera">Wordwide shifting available
+Buyers protection possibl</p>
+                    </div>
+                    <div class="items">
+                        <img class="suv"  src="./images/single-light.png " alt="">
+                        <h1 class="items_heading">Green Screen</h1>
+                        <h1 class="items_price inter-secondery_font">$25.48</h1>
+                        <h4 class="roboto-third_font star">4.99</h4>
+                        <p class="inter-secondery_font items_pera"> Wordwide shifting available
+Buyers protection possible!</p>
+                    </div>
+                    <div class="items">
+                        <img class="suv"  src="./images/action.png" alt="">
+                        <h1 class="items_heading">Action Camera</h1>
+                        <h1 class="items_price inter-secondery_font">$380.00</h1>
+                        <h4 class="roboto-third_font star">4.99</h4>
+                        <p class="inter-secondery_font items_pera">Wordwide shifting available
+Buyers protection possible!</p>
+                    </div>
+
+                </div>
             </div>
         </section>
     </main>
