--- a/index.html
+++ b/index.html
@@ -135,11 +135,33 @@ Buyers protection possible!</p>
                     </div>
 
                 </div>
+                 
+            </div>
+           <div class="more poppins-thin_primary_font">
+                <h6 class="see_more">See More </h6>
+                <img class="arrow" src="icons8-right-arrow-24.png" alt="">
+            </div>
+        </section>
+        <section>
+            <div class="fourth_sec">
+                <div class="gear"><img src="./images/gear.png" alt=""></div>
+                <div class="lasly">
+                    <h1 class="feature poppins-thin_primary_font">Featured products at one place</h1>
+                    <p class="last_pera poppins-thin_primary_font">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    <button class="pre join">Join now <img class="right_"src="icons8-right-arrow-24.png" alt=""></button>
+                </div>
             </div>
         </section>
     </main>
     <footer>
-
+        <div class="footer poppins-thin_primary_font">
+            <h1 class="in">
+                Influencer products
+            </h1>
+            <h4 class="copy">Copyright © 2020  influencer products</h4>
+            <h4 class="copy">All rights reserved</h4>
+            
+        </div>
 
     </footer>
 </body>
